--- a/src/pages/Products.css
+++ b/src/pages/Products.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     background-color: white;
-    min-height: 600vh;
+    /* min-height: auto; */
     display: flex;
     flex-direction: column;
     padding-bottom: 5rem;
@@ -275,6 +275,11 @@
         height: 20rem;
         border-radius: 1rem;
         text-align: center;
+    }
+
+    .products{
+        min-height: 100vh;
+        height: auto;
     }
 
     .productsbanner h1 {
